welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.code
def indexOfMaxValue(nums:Array[Int] ,value:Int): Int = {
	var i=nums.length-1; var a=-1;
	for (x<- 0 to i) {
		if (nums(x)==value) {
			a=x
		}
	}
	return a
}
